[gd_scene load_steps=38 format=2]

[ext_resource path="res://scenes/gameplay/player/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/gameplay/player/crest.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.313, 20.0058 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.5579, 22.3195 )

[sub_resource type="Animation" id=35]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.021449, 0.483112, 0.899835 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run_cycle_d"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.137924, 0.268123, 0.424503, 0.612095 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 15, 14, 16, 15 ]
}

[sub_resource type="Animation" id=4]
length = 0.35
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00488226, 0.100358, 0.201258, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=5]
resource_name = "run_cycle_v"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 19, 18 ]
}

[sub_resource type="Animation" id=6]
length = 0.35
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:dash_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1776.1, -0.25, 0, 0.349353, 383.376, 3.38419, -0.0831833, -0.00421268, 0.0629269, 0.0020799 ),
"times": PoolRealArray( 0.00271237, 0.23 )
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.231463 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "attack"
}, {
"args": [  ],
"method": "stop_attacking"
} ]
}

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 160, 160, 160 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 160, 160, 160 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 160, 160, 160 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 160, 160, 160 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 160, 160, 160 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 320, 160, 160 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 320, 160, 160 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 320, 160, 160 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 320, 160, 160 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 320, 160, 160 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 480, 160, 160 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 480, 160, 160 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 480, 160, 160 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 480, 160, 160 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 480, 160, 160 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 640, 160, 160 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 640, 160, 160 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 640, 160, 160 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 640, 160, 160 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 640, 160, 160 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 800, 160, 160 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 800, 160, 160 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 800, 160, 160 )

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Curve" id=33]
_data = [ Vector2( 0, 0.825153 ), 0.0, 0.0, 0, 0, Vector2( 0.520604, 0.886503 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.782209 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=34]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("StrikeTrail:default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 2.37841 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.329412 ), Color( 1, 1, 1, 0 ) ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 1 )
dash_offset = 3.38419

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 1, 0.984345 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 35 )
anims/run_cycle_d = SubResource( 3 )
anims/run_cycle_h = SubResource( 4 )
anims/run_cycle_v = SubResource( 5 )
anims/strike = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4.55593, -0.751341 )
scale = Vector2( 0.553153, 0.548196 )
z_index = 4096
frames = SubResource( 32 )
frame = 12
offset = Vector2( 0, 2 )

[node name="NoPos" type="Node" parent="."]

[node name="StrikeTrail" type="Line2D" parent="NoPos"]
z_index = 1
width = 15.0
width_curve = SubResource( 33 )
default_color = Color( 1, 1, 1, 0.131765 )

[node name="StrikePlayer" type="AnimationPlayer" parent="NoPos"]
anims/strike = SubResource( 34 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
